--- a/src/layouts/article.html.ejs
+++ b/src/layouts/article.html.ejs
@@ -4,7 +4,7 @@ version: '0.0'
 ---
 <% 
     // this makes sure that all pages include the correct sideboxes:
-    document.rightsideboxes= ['/includes/headlines.inc' ,'/includes/coapp-commits.inc' ];
+    document.rightsideboxes= ['headlines.inc' ,'coapp-commits.inc' ];
 %>
 
 <h1><%= document.title %></h1>
