--- a/src/layouts/default.html.ejs
+++ b/src/layouts/default.html.ejs
@@ -2,7 +2,7 @@
 <% 
     var cms = require("coappcms"); 
     var util = require('util'); 
-    cms.setRoot(document.docpad.config.srcPath); 
+    cms.setConfig(document.docpad.config); 
 %>
 <html lange="en">
 <head>
