--- a/src/layouts/post.html.ejs
+++ b/src/layouts/post.html.ejs
@@ -1,9 +1,9 @@
 ---
 layout: 'default'
-xleftsideboxes: ['/includes/test.inc' ]
+xleftsideboxes: ['test.inc' ]
 ---
 <% // this makes sure that all posts include the correct sideboxes:
-    // document.leftsideboxes = ['/includes/test.inc']; 
+    // document.leftsideboxes = ['test.inc']; 
 %>
 
 <h1><%= document.title %></h1>
