--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -12,7 +12,9 @@ order: 18
 [coapp.exe](/reference/coapp.html) -- CoApp command line utility
 
 # CoApp Developer Tools
-[ptk.exe](/reference/ptk.html) -- CoApp 'porting toolkit'
-[autopackage.exe](/reference/autopackage.html) -- CoApp packaging tool 
-[simplesigner.exe](/reference/simplesigner.html) -- CoApp digital signing tool
+**[pTk.exe](/reference/ptk.html)** -- CoApp 'porting toolkit'
+**[Autopackage.exe](/reference/autopackage.html)** - Creating packages for distribution
+**[Simplesigner.exe](/reference/simplesigner.html)** - Signing, Strongnaming and manipulating metadata in binaries
+**[mkRepo.exe](/reference/mkrepo.html)** - Generate an ATOM feed for a repository
+**[RepositoryService](/reference/repositoryservice.html)** - An automated atom feed generator with upload service
 
