ensured that includes are always loaded from includes directory

--- a/src/dynamic/pages/about.html.md.ejs
+++ b/src/dynamic/pages/about.html.md.ejs
@@ -2,7 +2,7 @@
 layout: 'default'
 title: 'About'
 order: 20
-rightsideboxes: ['/includes/headlines.inc' ]
+rightsideboxes: ['headlines.inc' ]
 --- 
 # About CoApp
 
