--- a/src/dynamic/pages/news.html.md.ejs
+++ b/src/dynamic/pages/news.html.md.ejs
@@ -2,8 +2,8 @@
 layout: 'default'
 title: 'News'
 order: 1
-xleftsideboxes: ['/includes/blog.inc' ]
-rightsideboxes: ['/includes/headlines.inc' ,'/includes/coapp-tweets.inc' ]
+xleftsideboxes: ['blog.inc' ]
+rightsideboxes: ['headlines.inc' ,'coapp-tweets.inc' ]
 ---
 <%  cms=require('coappcms'); %>
 
