--- a/src/dynamic/pages/developers.html.md.ejs
+++ b/src/dynamic/pages/developers.html.md.ejs
@@ -2,7 +2,7 @@
 layout: 'default'
 title: 'Developers'
 order: 8
-rightsideboxes: ['/includes/headlines.inc' ,'/includes/coapp-commits.inc' ]
+rightsideboxes: ['headlines.inc' ,'coapp-commits.inc' ]
 ---
 # Contributing to the ecosystem
 
