--- a/src/dynamic/pages/packages.html.md.ejs
+++ b/src/dynamic/pages/packages.html.md.ejs
@@ -2,7 +2,7 @@
 layout: 'default'
 title: 'Packages'
 order: 4
-rightsideboxes: ['/includes/headlines.inc' ,'/includes/coapp-commits.inc' ]
+rightsideboxes: ['headlines.inc' ,'coapp-commits.inc' ]
 --- 
 # Packages available:
 
