--- a/src/dynamic/pages/publishers.html.md.ejs
+++ b/src/dynamic/pages/publishers.html.md.ejs
@@ -2,7 +2,7 @@
 layout: 'default'
 title: 'Publishers'
 order: 5
-rightsideboxes: ['/includes/headlines.inc' ,'/includes/coapp-commits.inc' ]
+rightsideboxes: ['headlines.inc' ,'coapp-commits.inc' ]
 --- 
 # So ya wanna publishe some software eh?
 
