added more placeholder files

--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -9,7 +9,7 @@ order: 18
 [Common property-sheet reference](/reference/propertysheet.html) --  information common to CoApp tools that use property sheets for
 
 # CoApp
-[coapp.exe](/reference/coapp.html) -- CoApp command line utility
+[coapp.exe](/reference/coappcommandline.html) -- CoApp command line utility
 
 # CoApp Developer Tools
 **[pTk.exe](/reference/ptk.html)** -- CoApp 'porting toolkit'
