added more placeholders

--- a/src/dynamic/pages/help.html.md.ejs
+++ b/src/dynamic/pages/help.html.md.ejs
@@ -12,13 +12,13 @@ Don't panic, we're here to help figure out what went wrong (and fix it if we can
 
 ### Trouble Installing Packages
 [I'm getting an error during installation](/help/errors.html) 
-[I've installed a package, and it's not working](/pages/learn.html) 
+[I've installed a package, and it's not working](/pages/packagefailure.html) 
 [I need to remove CoApp and the installed packages](/help/cleanup.html) 
 
 ### Issues with using CoApp tools
-[The CoApp command line tool isn't working](/help/cli.html) 
+[The CoApp command line tool isn't working](/help/troubleshooting-cli.html) 
 
 ### Need Additional Help?
-[Find us on IRC](/contribute/irc.html)
-[Send us some email](/contribute/email.html)
+[Find us on IRC](/developer/irc.html)
+[Send us some email](/developer/email.html)
 
