fixed bad link on help page

--- a/src/dynamic/pages/help.html.md.ejs
+++ b/src/dynamic/pages/help.html.md.ejs
@@ -12,7 +12,7 @@ Don't panic, we're here to help figure out what went wrong (and fix it if we can
 
 ### Trouble Installing Packages
 [I'm getting an error during installation](/help/errors.html) 
-[I've installed a package, and it's not working](/pages/packagefailure.html) 
+[I've installed a package, and it's not working](/help/packagefailure.html) 
 [I need to remove CoApp and the installed packages](/help/cleanup.html) 
 
 ### Issues with using CoApp tools
