--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -5,6 +5,8 @@ order: 18
 --- 
 # Command References
 
+go check out [Fear the cowboy ][reference:ptk#rescantools] right now.
+
 [Common command-line reference](/reference/cli.html) --  usage information that is common to all/most CoApp command line tools
 [Common property-sheet reference](/reference/propertysheet.html) --  information common to CoApp tools that use property sheets for
 
@@ -18,3 +20,4 @@ order: 18
 **[mkRepo.exe](/reference/mkrepo.html)** - Generate an ATOM feed for a repository
 **[RepositoryService](/reference/repositoryservice.html)** - An automated atom feed generator with upload service
 
+[reference:cli]: http://fearthecowboy.com "Fear The Cowboy"
