--- a/src/dynamic/styles/custom.css.less
+++ b/src/dynamic/styles/custom.css.less
@@ -7,3 +7,19 @@
 .span70{width:80%;}
 
 .rightsidebox{float:right; display: inline;}
+
+.embeddedvideo {
+width:100%;
+background-color:#FFF;
+}
+
+.scrollcontainer {
+    display:block;
+    background:none repeat scroll 0 0; 
+    padding:0.4em; 
+    margin-bottom:0.6em; 
+    overflow:auto; 
+    -moz-border-radius:6px; 
+    -webkit-border-radius:6px; 
+    border-radius:6px;
+}
