removed test code

--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -5,8 +5,6 @@ order: 18
 --- 
 # Command References
 
-go check out [Fear the cowboy ][reference:ptk#rescantools] right now.
-
 [Common command-line reference](/reference/cli.html) --  usage information that is common to all/most CoApp command line tools
 [Common property-sheet reference](/reference/propertysheet.html) --  information common to CoApp tools that use property sheets for
 
@@ -14,7 +12,7 @@ go check out [Fear the cowboy ][reference:ptk#rescantools] right now.
 [coapp.exe](/reference/coappcommandline.html) -- CoApp command line utility
 
 # CoApp Developer Tools
-**[pTk.exe](/reference/ptk.html)** -- CoApp 'porting toolkit'
+**[pTk.exe][reference:ptk]** -- CoApp 'porting toolkit'
 **[Autopackage.exe](/reference/autopackage.html)** - Creating packages for distribution
 **[Simplesigner.exe](/reference/simplesigner.html)** - Signing, Strongnaming and manipulating metadata in binaries
 **[mkRepo.exe](/reference/mkrepo.html)** - Generate an ATOM feed for a repository
