fixed bug in header

--- a/src/layouts/default.html.ejs
+++ b/src/layouts/default.html.ejs
@@ -12,7 +12,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width">
 	<title><%= document.title %></title>
-	<meta name="description" content="%<= document.summary || '' %>">
+	<meta name="description" content="<%= document.summary || '' %>">
 	<meta name="author" content="<%= document.author || 'CoApp Project'%>">
 
     <meta property="og:title" content="CoApp - <%= document.title %>"/>
