added css to push footer to the bottom of the page

--- a/src/dynamic/styles/custom.css.less
+++ b/src/dynamic/styles/custom.css.less
@@ -23,3 +23,28 @@ background-color:#FFF;
     -webkit-border-radius:6px; 
     border-radius:6px;
 }
+
+
+.footer, .push {
+    height: 4em;
+    clear: both;
+}
+
+.footer { 
+    background-color:#EEE;
+}
+
+* {
+    margin: 0;
+}
+
+html, body {
+    height: 100%;
+}
+
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -6.7em;
+}
