fixed top of document being under header

--- a/src/dynamic/styles/custom.css.less
+++ b/src/dynamic/styles/custom.css.less
@@ -6,7 +6,14 @@
 .span60{width:60%;}
 .span70{width:80%;}
 
-.rightsidebox{float:right; display: inline;}
+.pushdown {
+    padding-top: 3em;
+}
+
+.rightsidebox{
+    float:right; 
+    display: inline;
+}
 
 .embeddedvideo {
 width:100%;
@@ -27,7 +34,6 @@ background-color:#FFF;
 
 .footer, .push {
     height: 4em;
-    clear: both;
 }
 
 .footer { 
