--- a/src/layouts/default.html.ejs
+++ b/src/layouts/default.html.ejs
@@ -45,7 +45,7 @@
 	
 </head>
 <body >
-    <div class="wrapper">
+    
 	<!-- Scripts -->
 	<script src="/scripts/jquery-1.6.4.min.js"></script>
 	<script src="/scripts/prettify.js"></script>
@@ -102,7 +102,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid">
+    <div class="wrapper">
+	<div class="container-fluid pushdown">
         <div class="sidebar">
             <%  if( document.leftsideboxes  ) { %>
                 <% document.leftsideboxes.forEach( function(each) {  %>
