--- a/src/dynamic/styles/custom.css.less
+++ b/src/dynamic/styles/custom.css.less
@@ -15,9 +15,13 @@
     display: inline;
 }
 
+.hero-unit {
+    background-color: #E0E7F7;
+}
+
 .embeddedvideo {
-width:100%;
-background-color:#FFF;
+    width:100%;
+    background-color:#FFF;
 }
 
 .scrollcontainer {
@@ -37,7 +41,7 @@ background-color:#FFF;
 }
 
 .footer { 
-    background-color:#EEE;
+    background-color:#E0FFE0;
 }
 
 * {
