Fixed path to /developers

--- a/src/dynamic/pages/help.html.md.ejs
+++ b/src/dynamic/pages/help.html.md.ejs
@@ -19,6 +19,6 @@ Don't panic, we're here to help figure out what went wrong (and fix it if we can
 [The CoApp command line tool isn't working](/help/troubleshooting-cli.html) 
 
 ### Need Additional Help?
-[Find us on IRC](/developer/irc.html)
-[Send us some email](/developer/email.html)
+[Find us on IRC](/developers/irc.html)
+[Send us some email](/developers/email.html)
 
