Add CoApp as prefix in <title>

--- a/src/layouts/default.html.ejs
+++ b/src/layouts/default.html.ejs
@@ -11,7 +11,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width">
-	<title><%= document.title %></title>
+	<title>CoApp - <%= document.title %></title>
 	<meta name="description" content="<%= document.summary || '' %>">
 	<meta name="author" content="<%= document.author || 'CoApp Project'%>">
 
