Added About article version 1.0 with collection of rounded free social icons from http://www.blogperfume.com

--- a/src/dynamic/pages/about.html.md.ejs
+++ b/src/dynamic/pages/about.html.md.ejs
@@ -2,42 +2,34 @@
 layout: 'default'
 title: 'About'
 order: 20
-rightsideboxes: ['headlines.inc' ]
+rightsideboxes: ['headlines.inc', 'coapp-connect.inc' ]
 --- 
 # About CoApp
 
-(test)
-
 ## What is CoApp?
-> Let people to find out if they need/like CoApp and need/want to
-use it, in 60-120 seconds.
-> History, motivation and rationale Why CoApp exists.
-> Very High-level, overall structure of project, infrastructure, etc.
+
+The CoApp project aims to create a vibrant Open Source ecosystem on Windows by providing the technologies needed to build a complete community-driven Package Management System, along with tools to enable developers to take advantage of features of the Windows platform. 
+
+> TODO: Let people to find out if they need/like CoApp and need/want to use it, in 60-120 seconds. History, motivation and rationale Why CoApp exists. Very High-level, overall structure of project, infrastructure, etc.
 
 ## CoApp Team
-> Who is behind CoApp, project owner/manager, people, organisations, names
+
+[Garrett Serack](http://fearthecowboy.com/) is the architect,the lead developer and the manager of the CoApp project.
+
+> TODO: Who is behind CoApp, project owner/manager, people, organisations, names
 
 ## License & Copyright
-> All the difficult questions are answered here
+
+The CoApp project is developed and maintained under the [Apache License, 2.0](http://www.apache.org/licenses/LICENSE-2.0.html).
+
+The CoApp project is hosted on [GitHub](http://github.com) under the organization CoApp at https://github.com/coapp/.
 
 ## Contact
-> Twitter, ..., links to Community & Support section (explained be
 
+If you have a question or query to the CoApp project team, there are numerous means of contact, depending on your interest and preference.
 
-... yadda yadda yadda
-
-
-# What is CoApp?
-
-## Design and Architecture
-**[Design and architecture documentation](/learn/design.html)** 
-<hr>
-
-## Tools Reference 
-**[Tools reference documentation](/learn/reference.html)** 
-<hr>
-
-## The CoApp Website 
-**[Tools reference documentation](/learn/website.html)** 
-<hr>
-
+Specifically to the nature of your request, you can:
+- send e-mail to the [mailing list](/developers/email.html)
+- join the [IRC channel](/developers/irc.html)
+- tweet [@CoApp](https://twitter.com/#!/coapp)
+- submit a [bug report or feature request](/developers/bugs.html)
