--- a/src/dynamic/pages/developers.html.md.ejs
+++ b/src/dynamic/pages/developers.html.md.ejs
@@ -10,36 +10,36 @@ CoApp is a community project, and we're always looking for more help.
 
 This section contains tutorials about how you can help out with CoApp.
 
-You might also want to [check out the Learning section](/pages/learn.html) to discover more about the [design of CoApp](/learn/coapp-design.html) 
+<!-- You might also want to [check out the Learning section](/pages/learn.html) to discover more about the [design of CoApp](/learn/coapp-design.html)  -->
 
 ## Developer How-to tutorials
     
 ### I want to help build CoApp 
 
-[Getting setup with git and github](/developers/git.html)
-[Setting up the development environment](/developers/development-environment.html)
-[Check out the source code](/developers/source-code.html)
-[Building the CoApp toolkit](/developers/building-toolkit.html)
-[Building the CoApp developer tools](/developers/building-devtools.html)
+ [Getting setup with git and github](/developers/git.html) <span class="label notice">Video</span> 
+ [Setting up the development environment](/developers/development-environment.html)
+<span class="label success">New!</span> [Check out the source code](/developers/source-code.html)
+<span class="label success">New!</span> [Building the CoApp toolkit](/developers/building-toolkit.html)
+<span class="label warning">Coming Soon!</span> [Building the CoApp developer tools](/developers/building-devtools.html)
 
 ### I want to help build CoApp Packages 
-[The Shallow forking process](/developers/shallow-forking.html)
-[Using PTK to automate a build](/developers/ptk.html)
-[Creating an autopackage script for shallow forks](/developers/autopackage-forks.html)
+<span class="label warning">Coming Soon!</span> [The Shallow forking process](/developers/shallow-forking.html)
+<span class="label warning">Coming Soon!</span> [Using PTK to automate a build](/developers/ptk.html)
+<span class="label warning">Coming Soon!</span> [Creating an autopackage script for shallow forks](/developers/autopackage-forks.html)
 
 ### I want to build CoApp packages for my own software
-[Creating an autopackage script for my own software](/developers/autopackage.html)
-[Publishing my own packages](/developers/publishing.html)
-[Pubishing Updates to my packages](/developers/publish-updates.html)
+<span class="label warning">Coming Soon!</span> [Creating an autopackage script for my own software](/developers/autopackage.html)
+<span class="label warning">Coming Soon!</span> [Publishing my own packages](/developers/publishing.html)
+<span class="label warning">Coming Soon!</span> [Pubishing Updates to my packages](/developers/publish-updates.html)
 
 ### I can help write documentation or add to the website
-[Check out the source for the website](/developers/check-out-website.html)
-[Making modifications to the CoApp website](/developers/modify-website.html)
-[Pushing patches back to the project](/developers/push-patches.html)
+<span class="label success">New!</span> [Check out the source for the website](/developers/check-out-website.html)
+<span class="label warning">Coming Soon!</span> [Making modifications to the CoApp website](/developers/modify-website.html)
+<span class="label warning">Coming Soon!</span> [Pushing patches back to the project](/developers/push-patches.html)
 
 ### I've found some bugs in CoApp (or a package)
-[Filing bugs for CoApp on github](/developers/filing-bugs.html)
-[Filing bugs for a package on github](/developers/filing-package-bugs.html)
+<span class="label warning">Coming Soon!</span> [Filing bugs for CoApp on github](/developers/filing-bugs.html)
+<span class="label warning">Coming Soon!</span> [Filing bugs for a package on github](/developers/filing-package-bugs.html)
 
 ### Interacting with the community
 [Find us on IRC](/developers/irc.html)
