added more content

--- a/src/dynamic/pages/developers.html.md.ejs
+++ b/src/dynamic/pages/developers.html.md.ejs
@@ -34,7 +34,7 @@ This section contains tutorials about how you can help out with CoApp.
 
 ### I can help write documentation or add to the website
 <span class="label success">New!</span> [Check out the source for the website](/developers/check-out-website.html)
-<span class="label warning">Coming Soon!</span> [Making modifications to the CoApp website](/developers/modify-website.html)
+<span class="label">in progress</span> [Making modifications to the CoApp website](/developers/modify-website.html)
 <span class="label warning">Coming Soon!</span> [Pushing patches back to the project](/developers/push-patches.html)
 
 ### I've found some bugs in CoApp (or a package)
