added more website documentation

--- a/src/dynamic/pages/publishers.html.md.ejs
+++ b/src/dynamic/pages/publishers.html.md.ejs
@@ -4,6 +4,8 @@ title: 'Publishers'
 order: 5
 rightsideboxes: ['headlines.inc' ,'coapp-commits.inc' ]
 --- 
-# So ya wanna publishe some software eh?
+# Documentation for publishers coming soon.
+
+You might want to check out the [developer docs first](/pages/developers.html)
 
 
