--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -18,4 +18,5 @@ order: 18
 **[mkRepo.exe](/reference/mkrepo.html)** - Generate an ATOM feed for a repository
 **[RepositoryService](/reference/repositoryservice.html)** - An automated atom feed generator with upload service
 
-[reference:cli]: http://fearthecowboy.com "Fear The Cowboy"
+# Website/Docpad References
+<span class="label success">New!</span> **[Garrett-Flavored-Markdown][gfm]** Reference
