--- a/src/dynamic/pages/developers.html.md.ejs
+++ b/src/dynamic/pages/developers.html.md.ejs
@@ -16,9 +16,9 @@ This section contains tutorials about how you can help out with CoApp.
     
 ### I want to help build CoApp 
 
- [Getting setup with git and github](/developers/git.html) <span class="label notice">Video</span> 
- [Setting up the development environment](/developers/development-environment.html)
-<span class="label success">New!</span> [Check out the source code](/developers/source-code.html)
+[Getting setup with git and github](/developers/git.html) <span class="label notice">Video</span> 
+[Setting up the development environment](/developers/development-environment.html)
+[Check out the source code](/developers/source-code.html)
 <span class="label success">New!</span> [Building the CoApp toolkit](/developers/building-toolkit.html)
 <span class="label warning">Coming Soon!</span> [Building the CoApp developer tools](/developers/building-devtools.html)
 
@@ -34,12 +34,17 @@ This section contains tutorials about how you can help out with CoApp.
 
 ### I can help write documentation or add to the website
 <span class="label success">New!</span> [Check out the source for the website](/developers/check-out-website.html)
-<span class="label">in progress</span> [Making modifications to the CoApp website](/developers/modify-website.html)
+<span class="label success">New!</span> [Making modifications to the CoApp website](/developers/modify-website.html)
 <span class="label warning">Coming Soon!</span> [Pushing patches back to the project](/developers/push-patches.html)
+<span class="label success">New!</span> [Transcoding a video into .mp4 (h.264) and .webm formats][developer:encoding-video]  <span class="label notice">Video</span> 
+
 
 ### I've found some bugs in CoApp (or a package)
 <span class="label warning">Coming Soon!</span> [Filing bugs for CoApp on github](/developers/filing-bugs.html)
 <span class="label warning">Coming Soon!</span> [Filing bugs for a package on github](/developers/filing-package-bugs.html)
+
+
+
 
 ### Interacting with the community
 [Find us on IRC](/developers/irc.html)
