added simple package feed

--- a/src/dynamic/pages/packages.html.md.ejs
+++ b/src/dynamic/pages/packages.html.md.ejs
@@ -4,6 +4,8 @@ title: 'Packages'
 order: 4
 rightsideboxes: ['headlines.inc' ,'coapp-commits.inc' ]
 --- 
+<script type="text/javascript" src="/scripts/jquery.jfeed.js"></script>
+<script type="text/javascript" src="/scripts/feed.js"></script>
 
 # Packages
 
@@ -16,3 +18,7 @@ Another way to think about the packages produced by CoApp is that they are shall
 ## Packages Repository
 
 > TODO
+
+
+
+<div id="result" />
