added noscript warning for pacakge feed

--- a/src/dynamic/pages/packages.html.md.ejs
+++ b/src/dynamic/pages/packages.html.md.ejs
@@ -20,5 +20,9 @@ Another way to think about the packages produced by CoApp is that they are shall
 > TODO
 
 
-
+<noscript>
+<p class="alert-message warning">
+    <b>Warning:</b> You will need to enable Javascript in your browser to see the package listing.
+</p>
+</noscript>
 <div id="result" />
