added golive statement

--- a/src/dynamic/pages/packages.html.md.ejs
+++ b/src/dynamic/pages/packages.html.md.ejs
@@ -17,9 +17,9 @@ Another way to think about the packages produced by CoApp is that they are shall
 
 ## Packages Repository
 
-> TODO
-
-
+<p class="alert-message block-message success">
+    <b>Go-live Beta Feature!</b> The package feed listing is still in active development, but you can start using it now!
+</p>
 <noscript>
 <p class="alert-message warning">
     <b>Warning:</b> You will need to enable Javascript in your browser to see the package listing.
