Added docs on Pushing patches back to the CoApp website.

--- a/src/dynamic/pages/developers.html.md.ejs
+++ b/src/dynamic/pages/developers.html.md.ejs
@@ -33,9 +33,9 @@ This section contains tutorials about how you can help out with CoApp.
 <span class="label warning">Coming Soon!</span> [Pubishing Updates to my packages](/developers/publish-updates.html)
 
 ### I can help write documentation or add to the website
-<span class="label success">New!</span> [Check out the source for the website](/developers/check-out-website.html)
+<span class="label success">New!</span> [Check out the source for the CoApp website](/developers/check-out-website.html)
 <span class="label success">New!</span> [Making modifications to the CoApp website](/developers/modify-website.html)
-<span class="label warning">Coming Soon!</span> [Pushing patches back to the project](/developers/push-patches.html)
+<span class="label success">New!</span> [Pushing patches back to the CoApp website](/developers/push-patches.html)
 <span class="label success">New!</span> [Transcoding a video into .mp4 (h.264) and .webm formats][developer:encoding-video]  <span class="label notice">Video</span> 
 
 
