--- a/src/dynamic/pages/developers.html.md.ejs
+++ b/src/dynamic/pages/developers.html.md.ejs
@@ -16,7 +16,7 @@ This section contains tutorials about how you can help out with CoApp.
     
 ### I want to help build CoApp 
 
-[Getting setup with git and github](/developers/git.html) <span class="label notice">Video</span> 
+[Getting setup with git and GitHub](/developers/git.html) <span class="label notice">Video</span>
 [Setting up the development environment](/developers/development-environment.html)
 [Check out the source code](/developers/source-code.html)
 <span class="label success">New!</span> [Building the CoApp toolkit](/developers/building-toolkit.html)
@@ -30,18 +30,18 @@ This section contains tutorials about how you can help out with CoApp.
 ### I want to build CoApp packages for my own software
 <span class="label warning">Coming Soon!</span> [Creating an autopackage script for my own software](/developers/autopackage.html)
 <span class="label warning">Coming Soon!</span> [Publishing my own packages](/developers/publishing.html)
-<span class="label warning">Coming Soon!</span> [Pubishing Updates to my packages](/developers/publish-updates.html)
+<span class="label warning">Coming Soon!</span> [Publishing Updates to my packages](/developers/publish-updates.html)
 
 ### I can help write documentation or add to the website
-<span class="label success">New!</span> [Check out the source for the CoApp website](/developers/check-out-website.html)
-<span class="label success">New!</span> [Making modifications to the CoApp website](/developers/modify-website.html)
-<span class="label success">New!</span> [Pushing patches back to the CoApp website](/developers/push-patches.html)
-<span class="label success">New!</span> [Transcoding a video into .mp4 (h.264) and .webm formats][developer:encoding-video]  <span class="label notice">Video</span> 
+<span class="label success">New!</span> [Checking out the source for CoApp website](/developers/check-out-website.html)
+<span class="label success">New!</span> [Making modifications to CoApp website](/developers/modify-website.html)
+<span class="label success">New!</span> [Pushing patches back to CoApp website](/developers/push-patches.html)
+<span class="label success">New!</span> [Transcoding a video into .mp4 (h.264) and .webm formats][developer:encoding-video] <span class="label notice">Video</span> 
 
 
 ### I've found some bugs in CoApp (or a package)
-<span class="label warning">Coming Soon!</span> [Filing bugs for CoApp on github](/developers/filing-bugs.html)
-<span class="label warning">Coming Soon!</span> [Filing bugs for a package on github](/developers/filing-package-bugs.html)
+<span class="label success">New!</span> [Filing bugs for CoApp on GitHub](/developers/filing-bugs.html)
+<span class="label warning">Coming Soon!</span> [Filing bugs for CoApp package on GitHub](/developers/filing-package-bugs.html)
 
 
 
