Fixed GitHub spelling with s/github/GitHub/. GitHub is a proper name not a common name.

--- a/src/dynamic/pages/developers.html.md.ejs
+++ b/src/dynamic/pages/developers.html.md.ejs
@@ -16,7 +16,7 @@ This section contains tutorials about how you can help out with CoApp.
     
 ### I want to help build CoApp 
 
-[Getting setup with git and GitHub](/developers/git.html) <span class="label notice">Video</span>
+[Getting setup with Git and GitHub](/developers/git.html) <span class="label notice">Video</span>
 [Setting up the development environment](/developers/development-environment.html)
 [Check out the source code](/developers/source-code.html)
 <span class="label success">New!</span> [Building the CoApp toolkit](/developers/building-toolkit.html)
