--- a/src/layouts/default.html.ejs
+++ b/src/layouts/default.html.ejs
@@ -53,6 +53,7 @@
 	<script src="/scripts/prettify.js"></script>
     <script src="/scripts/jquery.tweet.js"></script>
     <script src="/scripts/mediaelement-and-player.js"></script>
+    <script src="/scripts/bootstrap/bootstrap-dropdown.js"></script>
     <div id="fb-root"></div>
       <script type="text/javascript">
       (function() {
@@ -81,9 +82,11 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
-
+    <script>
+        // $('#topbar').dropdown();
+    </script>
 	<!-- Markup -->
-	<div class="topbar">
+	<div class="topbar" data-dropdown="dropdown">
 		<div class="fill">
 			<div class="container-fluid">
 				<h3><a href="/index.html"><image style="margin:0; padding:0; position:absolute; top:2px; left:-2px;" src="/images/logo-small_32x32.png"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CoApp</a></h3>
@@ -92,6 +95,17 @@
                         <li typeof="sioc:Page" about="<%= each.url %>" class="<%= document.url == each.url ? 'active' : '' %>">
                             <a href="<%= each.url %>" property="dc:title"><%= each.title %></a>
                         </li>
+                        <% if (each.url == "/pages/developers.html" ) { %>
+                        <li class="dropdown" >
+                            <a href="#" class="dropdown-toggle">GitHub</a>
+                            <ul class="dropdown-menu">
+                                <li><a href="http://github.com/coapp">CoApp Source Repositories</a></li>
+                                <li><a href="http://github.com/coapp-packages">Packages Source Repositories</a></li>
+                                <li class="divider"></li>
+                                <li><a href="http://github.com/organizations/coapp">Organization</a></li>
+                            </ul>
+                        </li>
+                        <% } %>
                     <% }); %>
 				</ul>
                 
