--- a/src/dynamic/styles/custom.css.less
+++ b/src/dynamic/styles/custom.css.less
@@ -61,8 +61,14 @@ html, body {
 
 :target {
     padding-top: 3em;
-    margin-top: -3em; }
+    margin-top: -3em; 
+}
 
 code{
-background-color: whiteSmoke;
+    background-color: whiteSmoke;
+}
+
+.dropdown-menu {
+    min-width: 230px;
+    max-width: 320px;
 }
