improved syntax-highlighter

--- a/src/dynamic/styles/syntax.css.less
+++ b/src/dynamic/styles/syntax.css.less
@@ -43,7 +43,9 @@
 .highlight .kn{color:#cc7833;}
 .highlight .kp{color:#cc7833;}
 .highlight .kr{color:#da4939;}
-.highlight .kt{color:#5a647e;}
+.highlight .kt{
+	color: #0099FF;
+}
 .highlight .m{color:#a5c261;}
 .highlight .s{color:#a5c261;}
 .highlight .na{color:#da4939;}
