turned off feed...broken

--- a/src/dynamic/pages/packages.html.md.ejs
+++ b/src/dynamic/pages/packages.html.md.ejs
@@ -4,8 +4,8 @@ title: 'Packages'
 order: 4
 rightsideboxes: ['headlines.inc' ,'coapp-commits.inc' ]
 --- 
-<script type="text/javascript" src="/scripts/jquery.jfeed.js"></script>
-<script type="text/javascript" src="/scripts/feed.js"></script>
+<!-- <script type="text/javascript" src="/scripts/jquery.jfeed.js"></script> 
+<script type="text/javascript" src="/scripts/feed.js"></script> --> 
 
 # Packages
 
