Added Overview files.  Fixed line-endings in generate.cmd.

--- a/src/dynamic/pages/about.html.md.ejs
+++ b/src/dynamic/pages/about.html.md.ejs
@@ -10,6 +10,8 @@ rightsideboxes: ['headlines.inc', 'coapp-connect.inc' ]
 
 The CoApp project aims to create a vibrant Open Source ecosystem on Windows by providing the technologies needed to build a complete community-driven Package Management System, along with tools to enable developers to take advantage of features of the Windows platform. 
 
+For more complete description, read our [quick overview of CoApp](/reference/overview.html)
+
 > TODO: Let people to find out if they need/like CoApp and need/want to use it, in 60-120 seconds. History, motivation and rationale Why CoApp exists. Very High-level, overall structure of project, infrastructure, etc.
 
 ## CoApp Team
