--- a/src/dynamic/pages/reference.html.md.ejs
+++ b/src/dynamic/pages/reference.html.md.ejs
@@ -12,11 +12,18 @@ order: 18
 [coapp.exe](/reference/coappcommandline.html) -- CoApp command line utility
 
 # CoApp Developer Tools
-**[pTk.exe][reference:ptk]** -- CoApp 'porting toolkit'
+**[pTk.exe](/reference/ptk.html)** - CoApp 'porting toolkit'
 **[Autopackage.exe](/reference/autopackage.html)** - Creating packages for distribution
 **[Simplesigner.exe](/reference/simplesigner.html)** - Signing, Strongnaming and manipulating metadata in binaries
 **[mkRepo.exe](/reference/mkrepo.html)** - Generate an ATOM feed for a repository
 **[RepositoryService](/reference/repositoryservice.html)** - An automated atom feed generator with upload service
 
+# Technical References
+<span class="label success">New!</span> **[Overview of CoApp](/reference/overview.html)** - General information about CoApp
+<span class="label success">New!</span> **[CoApp Technical Background](/reference/tech-background.html)** - Brief description of how CoApp does what it does
+<span class="label success">New!</span> **[In-Depth Technical Discussion](/reference/in-depth-tech.html)** - In-Depth descriptions of CoApp's underlying technologies
+
+<span class="label success">New!</span> **[Sys Admin Setup Guide](/reference/SysAdminSetup.html)** - Short walkthrough of a domain setup (Includes a reference for settings/rights administration)
+
 # Website/Docpad References
-<span class="label success">New!</span> **[Garrett-Flavored-Markdown][gfm]** Reference
+<span class="label success">New!</span> **[Garrett-Flavored-Markdown](/reference/garrett-flavored-markdown.html)** Reference
